crates/vexor-compiler/tests/golden/error/output/match_empty.err
parse error at line 3, column 1
  |
3 | let result = match r { }
  | ^
invalid keyword 'export'